# TypeRacerDiscord

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  PONYTAIL-DEBT.md  PRIVACY.md  README.md  TERMS.md
.github/workflows/: ci.yml
Contexte/: FeaturePOC.md  FeatureSupp_0.0.1.md  prochain prompt 07-21
Docs/: API.md  ETAPE-1-INSTALLATION.md  PHASE2.md  REFONTE-VISUELLE.md
Docs/adr/: 0001-persist-target-text-verbatim.md  0002-display-identity-never-persisted.md  0003-quotes-jamais-pb-eligible.md  0004-solo-sans-decompte.md  0005-trigram-drill-mode-separe.md  0006-cursus-apprendre-100-lecons.md  0007-decompte-race-reglage-produit.md  0008-room-cle-salon-ou-code.md  0009-race-source-de-texte-pas-de-mode.md  0010-podium-raceover-porte-les-resultats.md  0011-play-of-the-game.md
Docs/agents/: domain.md
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_keystroke_log_kind.sql  0003_target_text.sql  0004_learn_progress.sql  0005_quotes_never_pb_eligible.sql  0006_solo_sans_decompte_pb_reset.sql
backend/src/: discord.rs  main.rs  quote.rs  store.rs
backend/src/domain/: analysis.rs  mod.rs  replay.rs  text_gen.rs  types.rs
backend/src/ws/: mod.rs  protocol.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.test.ts  api.ts  discord.ts  live-stats.ts  main.ts  style.css  vite-env.d.ts
frontend/src/core/: clock.ts  countdown.test.ts  countdown.ts  learn.test.ts  learn.ts  net.test.ts  net.ts  types.ts
test-vectors/: scoreboard.json
(+34 files in other folders)
