[package]
name = "typeracer-discord-backend"
version = "0.1.0"
edition = "2021"
description = "Backend autoritaire TypeRacerDiscord (recompute Rust + API HTTP)."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
# Compile un poil plus vite pendant l'itération.
debug = 1
