[package]
name = "typeracer-discord-backend"
version = "0.1.0"
edition = "2021"
description = "Backend autoritaire TypeRacerDiscord (recompute Rust + API HTTP)."

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["fs"] }
dotenvy = "0.15"
futures-util = { version = "0.3", default-features = false }

[profile.dev]
# Compile un poil plus vite pendant l'itération.
debug = 1
